--- a/client/client/presentors/rest/templates/user_detail.html.j2
+++ b/client/client/presentors/rest/templates/user_detail.html.j2
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html.j2' %}
 
 {% block content %}
 <h2>User Details</h2>
@@ -9,6 +9,6 @@
 <p><strong>Created At:</strong> {{ timestamp_to_datetime(user.created_at) }}</p>
 <p><strong>Updated At:</strong> {{ timestamp_to_datetime(user.updated_at) }}</p>
 <br>
-<a href="{{ url_for('users:update_user_form', user_id=user.id) }}">Edit User</a> |
-<a href="{{ url_for('users:read_users') }}">Back to Users List</a>
+<a href="{{ url_for('update_user_form', user_id=user.id) }}">Edit User</a> |
+<a href="{{ url_for('read_users') }}">Back to Users List</a>
 {% endblock %}
