--- a/client/client/presentors/rest/templates/base.html.j2
+++ b/client/client/presentors/rest/templates/base.html.j2
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <!-- Мета-теги -->
-    <meta charset="UTF-8">
-    <title>{% block title %}User Management System{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Мета-теги -->
+  <meta charset="UTF-8">
+  <title>{% block title %}User Management System{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <!-- Materialize CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="{{ url_for('static', path='./imgs/favicon.png')}}">
 
-    <!-- Собственные стили -->
-    {# <link href="{{ url_for('static', filename='./css/style.css') }}" rel="stylesheet"> #}
+  <!-- Materialize CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
 
-    {% block head %}{% endblock %}
+  <!-- Собственные стили -->
+  {# <link href="{{ url_for('static', path='./css/style.css') }}" rel="stylesheet"> #}
+
+  {% block head %}{% endblock %}
 </head>
 <body>
-    <!-- Навигационная панель -->
-    <nav class="blue-grey darken-3">
-        <div class="nav-wrapper container">
-            <a href="" class="brand-logo">GRPC Client</a>
-            <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="">О нас</a></li>
-                <li><a href="">Услуги</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </div>
-    </nav>
+  <!-- Навигационная панель -->
+  <nav class="blue-grey darken-3">
+    <div class="nav-wrapper container">
+      <a href="" class="brand-logo">GRPC Client</a>
+      <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="{{ url_for('users:list') }}">Список пользователей</a></li>
+        <li><a href="{{ url_for('users:create') }}">Создать пользователя</a></li>
+      </ul>
+    </div>
+  </nav>
 
     <!-- Мобильное меню -->
     <ul class="sidenav" id="mobile-nav">
-        <li><a href="">Главная</a></li>
-        <li><a href="">О нас</a></li>
-        <li><a href="">Услуги</a></li>
-        <li><a href="">Контакты</a></li>
+        <li><a href="{{ url_for('users:list') }}">Список пользователей</a></li>
+        <li><a href="{{ url_for('users:create') }}">Создать пользователя</a></li>
     </ul>
 
     <!-- Основной контент -->
     <main>
+        {% if errors %}
+        <div class="card red darken-1">
+            <div class="card-content white-text">
+                <span class="card-title">Errors</span>
+                <ul class="collection">
+                {% for error in errors %}
+                    <li class="collection-item">{{ error }}</li>
+                {% endfor %}
+                </ul>
+            </div>
+        </div>
+        {% endif %}
         <div class="container">
             {% block content %}
             <!-- Содержимое страницы -->
@@ -78,7 +89,7 @@
     </script>
 
     <!-- Собственные скрипты -->
-    {# <script src="{{ url_for('static', filename='js/script.js') }}"></script> #}
+    {# <script src="{{ url_for('static', path='js/script.js') }}"></script> #}
 
     {% block scripts %}{% endblock %}
 </body>
