--- a/client/client/presentors/rest/templates/index.html.j2
+++ b/client/client/presentors/rest/templates/index.html.j2
@@ -2,43 +2,58 @@
 
 {% block content %}
 <div class="section">
-<div class="row">
-    <h1>Список пользователей</h1>
-</div>
-<div class="row">
-<a href="{{ url_for('create_user_form') }}" class="btn waves-effect waves-light orange">Создать пользователя</a>
-</div>
-<div class="row">
-<table class="highlight">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Email</th>
-            <th>Имя</th>
-            <th>Фамилия</th>
-            <th>Действия</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for user in user_list.users %}
-        <tr>
-            <td>{{ user.id }}</td>
-            <td>{{ user.email }}</td>
-            <td>{{ user.first_name }}</td>
-            <td>{{ user.last_name }}</td>
-            <td>
-                <a href="{{ url_for('users:user_detail', user_id=user.id) }}">View</a> |
-                <a href="{{ url_for('users:update_user_form', user_id=user.id) }}">Edit</a> |
-                <form action="{{ url_for('users:delete_user', user_id=user.id) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this user?');">
-                    <button type="submit">Delete</button>
-                </form>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
+  <div class="row">
+    <h2>Список пользователей</h2>
+  </div>
+  <div class="row">
+    <div class="col">
+      <a href="{{ url_for('users:create_form') }}" class="btn waves-effect waves-light">
+        <i class="material-icons left">person_add</i>Создать пользователя
+      </a>
+    </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h5>Всего {{ user_list.total }} пользователей</h5>
+        <h5>Выгружено {{ user_list.items|length }} пользователей</h5>
+      </div>
+    </div>
+    <div class="row">
+        <table class="highlight">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Email</th>
+                    <th>Имя</th>
+                    <th>Фамилия</th>
+                    <th>Действия</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in user_list.items %}
+                <tr>
+                    <td>{{ user.id }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.first_name }}</td>
+                    <td>{{ user.last_name }}</td>
+                    <td>
+                        <div class="row">
+                        <a class="btn-small" href="{{ url_for('users:detail', user_id=user.id) }}">Просмотр</a>
+                        </div>
+                        <div class="row">
+                        <a class="btn-small" href="{{ url_for('users:update_form', user_id=user.id) }}">Изменить</a>
+                        </div>
+                        <div class="row">
+                        <form action="{{ url_for('users:delete', user_id=user.id) }}" method="post" onsubmit="return confirm('Вы действительно хотите удалить?');">
+                            <button class="btn-small" type="submit">Удалить</button>
+                        </form>
+                        </div>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
 
-</table>
-</div>
-
+        </table>
+    </div>
 </div>
 {% endblock %}
