--- a/client/client/presentors/rest/templates/user_detail.html.j2
+++ b/client/client/presentors/rest/templates/user_detail.html.j2
@@ -51,7 +51,7 @@
   <div class="row">
     <div class="col">
       <a class="waves-effect waves-light btn-small" href="{{ url_for('users:update', user_id=user.id) }}">
-        <i class="material-icons left">edit</i>Edit User
+        <i class="material-icons left">edit</i>Обновить пользователя
       </a>
     </div>
   </div>
