Add TLS FULLFILL EVER

--- a/client/client/presentors/rest/templates/base.html.j2
+++ b/client/client/presentors/rest/templates/base.html.j2
@@ -41,7 +41,7 @@
         <div class="card red darken-1">
             <div class="card-content white-text">
                 <span class="card-title">Errors</span>
-                <ul class="collection">
+                <ul class="collection red-text">
                 {% for error in errors %}
                     <li class="collection-item">{{ error }}</li>
                 {% endfor %}
